force-app/main/default/objects/sugati__Tour_Booking_Form__c/sugati__Tour_Booking_Form__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Tour Booking Form</label>
</CustomObject>