force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__ADD_EXTRAS__c.field-meta.xml
<CustomField>
    <fullName>sugati__ADD_EXTRAS__c</fullName>
    <defaultValue>&quot;ADD EXTRAS&quot;</defaultValue>
    <label>ADD EXTRAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>