force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>sugati__Additional_Information__c</fullName>
    <description>The label of Additional Information.</description>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>