force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Alert_Success_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__Alert_Success_Message__c</fullName>
    <defaultValue>&quot;Save successful!&quot;</defaultValue>
    <label>Alert.Success.Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>