force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Bold_Headers__c.field-meta.xml
<CustomField>
    <fullName>sugati__Bold_Headers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bold Headers</label>
    <type>Checkbox</type>
</CustomField>