force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Book_your_trip__c.field-meta.xml
<CustomField>
    <fullName>sugati__Book_your_trip__c</fullName>
    <defaultValue>&quot;Book your trip&quot;</defaultValue>
    <label>Book your trip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>