force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Button_CONFIRM_MY_BOOKING__c.field-meta.xml
<CustomField>
    <fullName>sugati__Button_CONFIRM_MY_BOOKING__c</fullName>
    <defaultValue>&quot;CONFIRM MY BOOKING&quot;</defaultValue>
    <label>Button.CONFIRM MY BOOKING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>