force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Check_Required_Fields_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__Check_Required_Fields_for_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Required Fields for Payment</label>
    <type>Checkbox</type>
</CustomField>