force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Colour_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Button__c</fullName>
    <defaultValue>&quot;#EC9740&quot;</defaultValue>
    <label>Colour.Button</label>
    <length>20</length>
    <type>Text</type>
</CustomField>