force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Colour_Cost_Summary_Background__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Cost_Summary_Background__c</fullName>
    <defaultValue>&quot;#f5ba62&quot;</defaultValue>
    <label>Colour.Cost Summary Background</label>
    <length>20</length>
    <type>Text</type>
</CustomField>