force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Colour_Text_in_Buttons__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Text_in_Buttons__c</fullName>
    <defaultValue>&quot;white&quot;</defaultValue>
    <label>Colour.Text in Buttons</label>
    <length>20</length>
    <type>Text</type>
</CustomField>