force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Copy_Address_Instruction__c.field-meta.xml
<CustomField>
    <fullName>sugati__Copy_Address_Instruction__c</fullName>
    <label>Copy Address Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>