force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Costings_Overview_Instruction__c.field-meta.xml
<CustomField>
    <fullName>sugati__Costings_Overview_Instruction__c</fullName>
    <label>Costings Overview Instruction</label>
    <type>TextArea</type>
</CustomField>