force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Display_Twitter__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Twitter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Twitter</label>
    <type>Checkbox</type>
</CustomField>