force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Display_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Whatsapp</label>
    <type>Checkbox</type>
</CustomField>