force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Enable_Stripe_Payments__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Stripe_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Stripe Payments</label>
    <type>Checkbox</type>
</CustomField>