force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Extra_Instruction__c.field-meta.xml
<CustomField>
    <fullName>sugati__Extra_Instruction__c</fullName>
    <label>Extra Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>