force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Facebook_URL__c</fullName>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>