force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Font_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__Font_Family__c</fullName>
    <defaultValue>&quot;&apos;Salesforce Sans&apos;,Arial,sans-serif&quot;</defaultValue>
    <inlineHelpText>The font-family property can hold several font names as a &quot;fallback&quot; system. If the browser does not support the first font, it tries the next font.</inlineHelpText>
    <label>Font Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>