force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Header_Home_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Home_Page_URL__c</fullName>
    <defaultValue>&quot;https://sugatitravel.com/&quot;</defaultValue>
    <label>Header.Home Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>