force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Header_Logo__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Logo__c</fullName>
    <inlineHelpText>Id from Document.</inlineHelpText>
    <label>Header.Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>