force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Hide_Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hide_Occupancy_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Occupancy Type</label>
    <type>Checkbox</type>
</CustomField>