force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__MY_Trip_Summary__c.field-meta.xml
<CustomField>
    <fullName>sugati__MY_Trip_Summary__c</fullName>
    <defaultValue>&quot;MY Trip Summary&quot;</defaultValue>
    <label>MY Trip Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>