force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Preview_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__Preview_Opportunity_Id__c</fullName>
    <description>The Id of the preview opportunity (this will be automatically saved from the reference)</description>
    <inlineHelpText>The Id of the preview opportunity (this will be automatically saved from the reference)</inlineHelpText>
    <label>Preview Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>