force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Preview_Opportunity_Reference__c.field-meta.xml
<CustomField>
    <fullName>sugati__Preview_Opportunity_Reference__c</fullName>
    <description>The reference of the opportunity to use as the preview</description>
    <inlineHelpText>The reference of the opportunity to use as the preview</inlineHelpText>
    <label>Preview Opportunity Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>