force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Redirect_URL_On_Confirm_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Redirect_URL_On_Confirm_Button__c</fullName>
    <defaultValue>&quot;https://sugatitravel.com&quot;</defaultValue>
    <label>Redirect URL On Confirm Button</label>
    <type>Url</type>
</CustomField>