force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Show_Terms_And_Condition__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Terms_And_Condition__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Terms And Condition</label>
    <type>Checkbox</type>
</CustomField>