force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Show_Tour_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Tour_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Tour Details</label>
    <type>Checkbox</type>
</CustomField>