force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Space_between_fields__c.field-meta.xml
<CustomField>
    <fullName>sugati__Space_between_fields__c</fullName>
    <label>Space.between fields</label>
    <length>5</length>
    <type>Text</type>
</CustomField>