force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Stripe_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__Stripe_Amount__c</fullName>
    <defaultValue>&apos;Amount&apos;</defaultValue>
    <label>Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>