force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Stripe_Make_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__Stripe_Make_Payment__c</fullName>
    <defaultValue>&apos;Make Payment&apos;</defaultValue>
    <label>Make Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>