force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Stripe_Pay_Now__c.field-meta.xml
<CustomField>
    <fullName>sugati__Stripe_Pay_Now__c</fullName>
    <defaultValue>&apos;PAY NOW&apos;</defaultValue>
    <label>Pay Now</label>
    <length>255</length>
    <type>Text</type>
</CustomField>