force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Stripe_Payee__c.field-meta.xml
<CustomField>
    <fullName>sugati__Stripe_Payee__c</fullName>
    <defaultValue>&apos;Payee&apos;</defaultValue>
    <label>Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>