force-app/main/default/objects/sugati__Tour_Booking_Form__c/fields/sugati__Whatsapp_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Whatsapp_URL__c</fullName>
    <label>Whatsapp URL</label>
    <type>Url</type>
</CustomField>