force-app/main/default/objects/sugati__Tour_Booking_Form__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>sugati__Colour_Background__c</columns>
    <columns>sugati__Colour_Main__c</columns>
    <columns>sugati__Heading_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>